Agrego vista funciones que recibe del backend las funciones para esa pelicula

--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
     "@angular/youtube-player": "^13.3.9",
+    "@aws-sdk/client-cognito-identity-provider": "^3.105.0",
+    "amazon-cognito-identity-js": "^5.2.9",
     "lodash": "^4.17.21",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
