--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "amazon-cognito-identity-js": "^5.2.9",
     "lodash": "^4.17.21",
     "rxjs": "~7.5.0",
+    "sweetalert2": "^11.4.18",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
